CodeCheck整改
Co-authored-by: fujilie<fujilie@huawei.com>