@@ -10,6 +10,7 @@ import com.openjiuwen.core.runner.drunner.remoteclient.RemoteClientConfig;
 import com.openjiuwen.core.runner.drunner.remoteclient.RemoteClientFactory;
 import com.openjiuwen.core.runner.drunner.remoteclient.RemoteClientProvider;
 import com.openjiuwen.extensions.a2a.A2ARemoteClient;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -28,26 +29,25 @@ public class DefaultAgentCoreRemoteClientFactory implements AgentCoreRemoteClien
     private static final Logger log = LoggerFactory.getLogger(DefaultAgentCoreRemoteClientFactory.class);
 
     private final AgentCoreExternalProperties properties;
+
     private final AgentCoreRemoteClientDecoratorFactory remoteDecoratorFactory;
+
     private final List<RemoteClientProvider> customRemoteClientProviders;
 
-    public DefaultAgentCoreRemoteClientFactory(
-            AgentCoreExternalProperties properties,
-            AgentCoreRemoteClientDecoratorFactory remoteDecoratorFactory) {
+    public DefaultAgentCoreRemoteClientFactory(AgentCoreExternalProperties properties,
+        AgentCoreRemoteClientDecoratorFactory remoteDecoratorFactory) {
         this(properties, remoteDecoratorFactory, List.of());
     }
 
-    public DefaultAgentCoreRemoteClientFactory(
-            AgentCoreExternalProperties properties,
-            AgentCoreRemoteClientDecoratorFactory remoteDecoratorFactory,
-            List<RemoteClientProvider> customRemoteClientProviders) {
+    public DefaultAgentCoreRemoteClientFactory(AgentCoreExternalProperties properties,
+        AgentCoreRemoteClientDecoratorFactory remoteDecoratorFactory,
+        List<RemoteClientProvider> customRemoteClientProviders) {
         this.properties = properties != null ? properties : new AgentCoreExternalProperties();
         this.remoteDecoratorFactory = remoteDecoratorFactory != null
-                ? remoteDecoratorFactory
-                : new DefaultAgentCoreRemoteClientDecoratorFactory();
-        this.customRemoteClientProviders = customRemoteClientProviders != null
-                ? List.copyOf(customRemoteClientProviders)
-                : Collections.emptyList();
+            ? remoteDecoratorFactory
+            : new DefaultAgentCoreRemoteClientDecoratorFactory();
+        this.customRemoteClientProviders = customRemoteClientProviders != null ? List.copyOf(
+            customRemoteClientProviders) : Collections.emptyList();
         this.properties.getRemote().validateClients();
     }
 
@@ -66,14 +66,14 @@ public class DefaultAgentCoreRemoteClientFactory implements AgentCoreRemoteClien
     public RemoteClientConfig configFor(String clientId) {
         AgentCoreExternalProperties.RemotePolicy policy = properties.getRemote();
         policy.validateClients();
-        AgentCoreExternalProperties.RemoteClientEndpoint client = policy.findClient(clientId).orElseThrow(
-                () -> new IllegalArgumentException("Unknown remote client: " + clientId));
+        AgentCoreExternalProperties.RemoteClientEndpoint client = policy.findClient(clientId)
+            .orElseThrow(() -> new IllegalArgumentException("Unknown remote client: " + clientId));
         return RemoteClientConfig.builder()
-                .id(client.getId())
-                .name(defaultText(client.getName(), client.getId()))
-                .protocol(toProtocol(client.getProtocol()))
-                .url(client.getUrl())
-                .build();
+            .id(client.getId())
+            .name(defaultText(client.getName(), client.getId()))
+            .protocol(toProtocol(client.getProtocol()))
+            .url(client.getUrl())
+            .build();
     }
 
     private void registerRemoteClientProviders() {
